# GMAH-GiveMeAHand

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_COMPREHENSIVE_ANALYSIS.md  README.md  deep-research-report (1).md  docker-compose.yml  pyproject.toml
configs/: mcp-servers.docker.yaml  mcp-servers.example.yaml  rag.example.yaml  tools.example.json
data/: evaluation-prompt.txt  evaluation-report-template.txt
docs/: architecture.md  channel-adapter.md  grading-integration.md  memory-design.md  modules.md  prd.md  rag-design.md  roadmap.md  security.md
evals/: rag_quality_eval.md  retriever_eval.md
memory/: AGENT.md  AGENTS.md  MEMORY.md  SOUL.md
scripts/: keep-napcat-alive.sh
tests/: test_agent_api.py  test_agent_core.py  test_agent_e2e.py  test_api_edges.py  test_api_error_handlers.py  test_api_evaluation.py  test_api_mcp.py  test_api_model.py  test_api_qq.py  test_api_rag.py  test_api_sessions.py  test_archive_inspector.py  test_auth.py  test_channel_events.py  test_chat_client.py  test_config_and_loaders.py  test_embedding_real.py  test_evaluation_service.py  test_grading_adapter.py  test_idempotency.py  test_infra_adapters.py  test_langgraph_runtime.py  test_llm_errors.py  test_local_mcp_enhanced.py  test_local_mcp_server.py  test_mcp_errors.py  test_mcp_gateway.py  test_memory_models.py  test_onebot_adapter.py  test_onebot_downloader_client.py  test_onebot_ws.py  test_rag_components.py  test_rag_gateway.py  test_repository_agent.py  test_repository_analyzer.py  test_security_stores.py  test_session_orchestrator.py  test_skill_loader.py  (+4 more)
(+124 files in other folders)
