[project]
name = "agent-workflow"
version = "0.1.0"
description = "Layered agent platform scaffold for MCP, function calling, skills, multimodal RAG, memory, and channel adapters."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Workflow Team" }]
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "jsonschema>=4.23.0",
    "pyyaml>=6.0.2",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "langgraph>=0.2.70",
    "redis>=5.0.0",
    "psycopg[binary]>=3.2.0",
    "qdrant-client>=1.11.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-jsonschema>=4.23.0",
    "types-PyYAML>=6.0.12",
    "pytest-cov>=5.0.0",
]
rag = [
    "qdrant-client>=1.11.0",
    "pymupdf>=1.24.0",
    "reportlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_workflow"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
